[ANCHOR W/ #] Fix scrolling adjustement on Firefox (take more space than other browsers) + give more space to anchors in ambassadors page

--- a/client/styles/prismic.css
+++ b/client/styles/prismic.css
@@ -178,3 +178,24 @@
         }
     }
 }
+
+:global(.static-page-ambassadors) {
+    & h1,
+    & h2,
+    & h3,
+    & h4,
+    & h5,
+    & h6 {
+        & > a[href^='#']:before {
+            height: 5em;
+            margin-top: -5em;
+
+            @supports (-moz-appearance: meterbar) {
+                & {
+                    height: 4em;
+                    margin-top: -4em;
+                }
+            }
+        }
+    }
+}
